<resources>
    <string name="app_name">GenTree</string>
    <string name="register_title">Register here!</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="password">Password</string>
    <string name="register_button">Register!</string>
    <string name="from_register_to_login">Already registered? Click here to login</string>

    <string name="logout_button">Logout</string>
    <string name="from_login_to_register">Need an account? Click here to register</string>

    <string name="node_name">Name</string>;
    <string name="node_last_name">Last name</string>
    <string name="node_date_of_birth">Date of birth</string>
    <string name="node_date_of_death">Date of death</string>
    <string name="node_button_add">Add node</string>
    <string name="node_place_of_residence">Place of residence</string>
    <string name="node_work">Work</string>
    <string name="education">Education</string>
    <string name="node_description">Description</string>
    <string name="node_parentNumber">NumberOfParent</string>
    <string name="node_number">Number of node</string>

    <string name="first_node_name">Name</string>;
    <string name="first_node_last_name">Last name</string>
    <string name="first_node_date_of_birth">Date of birth</string>
    <string name="first_node_date_of_death">Date of death</string>
    <string name="first_node_button_add">Add node</string>
    <string name="first_node_place_of_residence">Place of residence</string>
    <string name="first_node_work">Work</string>
    <string name="first_education">Education</string>
    <string name="first_node_description">Description</string>
</resources>
