<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddNewNodeActivity">>

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/buttongoback"
        android:onClick="goToMenu"></Button>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddNewNodeActivity">

        <EditText
            android:id="@+id/add_node_parentNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Child id"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/add_node_location"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/add_node_location"
            app:layout_constraintTop_toBottomOf="@+id/add_node_location"
            app:layout_constraintVertical_bias="0.062" />

        <EditText
            android:id="@+id/add_node_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="99dp"
            android:layout_marginEnd="99dp"
            android:ems="10"
            android:hint="@string/node_name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.056" />

        <EditText
            android:id="@+id/add_node_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/node_last_name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/add_node_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/add_node_name"
            app:layout_constraintTop_toBottomOf="@+id/add_node_name"
            app:layout_constraintVertical_bias="0.019" />

        <EditText
            android:id="@+id/add_node_date_of_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/node_date_of_birth"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/add_node_last_name"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/add_node_last_name"
            app:layout_constraintTop_toBottomOf="@+id/add_node_last_name"
            app:layout_constraintVertical_bias="0.032" />

        <EditText
            android:id="@+id/add_node_date_of_death"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/node_date_of_death"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/add_node_date_of_birth"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/add_node_date_of_birth"
            app:layout_constraintTop_toBottomOf="@+id/add_node_date_of_birth"
            app:layout_constraintVertical_bias="0.018" />

        <Button
            android:id="@+id/add_node_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addNode"
            android:text="@string/node_button_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/add_node_date_of_death"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="@+id/add_node_date_of_death"
            app:layout_constraintTop_toBottomOf="@+id/add_node_parentNo"
            app:layout_constraintVertical_bias="0.175" />

        <EditText
            android:id="@+id/add_node_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/node_place_of_residence"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/add_node_date_of_death"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/add_node_date_of_death"
            app:layout_constraintTop_toBottomOf="@+id/add_node_date_of_death"
            app:layout_constraintVertical_bias="0.044" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>